<resources>
    <string name="app_name">HW2</string>
    <string name="add_item">Add item</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="amount">Amount</string>
    <string name="item_name">Item name</string>
    <string name="add_shopping_item">Add Shopping Item</string>
    <string name="name">Name</string>
    <string name="item_name_qty_0">Item: Name, Qty: 0</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
</resources>